Fixed bug with user's existing rating not showing as coloured stars on recipe detail page

--- a/week8/cookery/app/static/css/style.css
+++ b/week8/cookery/app/static/css/style.css
@@ -161,7 +161,6 @@ i {
   padding: 0;
   border: 0;
   background: none;
-  color: #6c757d;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
